<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.jose.guiacom.CadastroAdminActivity"
        tools:showIn="@layout/activity_cadastro_admin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/inserir"
            android:layout_marginTop="5sp"
            android:id="@+id/inserir"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <Spinner
            android:id="@+id/spnSegs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_below="@+id/inserir"
            android:spinnerMode="dropdown"
            android:layout_marginTop="20sp"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEmpresa"
            android:layout_below="@+id/spnSegs"
            android:layout_marginTop="30dp"
            android:hint="@string/empresa_hint"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPresentation"
            android:inputType="textMultiLine"
            android:layout_below="@+id/txtEmpresa"
            android:layout_marginTop="30dp"
            android:hint="@string/presentation_hint"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtResponsavel"
            android:layout_below="@+id/txtPresentation"
            android:layout_marginTop="30dp"
            android:hint="@string/responsavel_hint"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEstado"
            android:layout_below="@+id/txtResponsavel"
            android:layout_marginTop="30dp"
            android:hint="@string/estado_hint"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCidade"
            android:layout_below="@+id/txtEstado"
            android:layout_marginTop="30dp"
            android:hint="@string/cidade_hint"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtAddress"
            android:layout_below="@+id/txtCidade"
            android:layout_marginTop="30dp"
            android:hint="@string/endereco_hint"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/l1"
            android:layout_below="@+id/txtAddress"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/txtNum"
                android:inputType="number"
                android:layout_marginTop="30dp"
                android:hint="@string/numero_hint" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/txtBairro"
                android:layout_marginTop="30dp"
                android:hint="@string/bairro_hint" />
        </LinearLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtComplemento"
            android:inputType="text"
            android:layout_marginTop="30dp"
            android:hint="@string/comp_hint"
            android:layout_below="@+id/l1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTel1"
            android:layout_below="@+id/txtComplemento"
            android:inputType="phone"
            android:layout_marginTop="30dp"
            android:hint="@string/telefone_hint"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTel2"
            android:layout_below="@+id/txtTel1"
            android:inputType="phone"
            android:layout_marginTop="30dp"
            android:hint="@string/telefone_opcional_hint"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEmail"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/txtTel2"
            android:layout_marginTop="30dp"
            android:hint="@string/email_hint"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSite"
            android:layout_below="@+id/txtEmail"
            android:layout_marginTop="30dp"
            android:hint="@string/site_hint"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/rgTipoCadastro"
            android:layout_below="@+id/txtSite"
            android:layout_marginTop="26dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">
            <RadioButton android:id="@+id/radio_gratis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_gratis"
                android:checked="true"/>
            <RadioButton android:id="@+id/radio_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_1"/>
            <RadioButton android:id="@+id/radio_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_2"/>
            <RadioButton android:id="@+id/radio_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_3"/>
        </RadioGroup>

        <!--
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPendente"
            android:textOff="Não"
            android:textOn="Sim"
            android:text="@string/pendente"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/rgTipoCadastro"
            android:layout_centerHorizontal="true" />
         -->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEnviar"
            android:src="@drawable/cad"
            android:layout_below="@+id/rgTipoCadastro"
            android:layout_marginTop="20dp"
            android:background="@color/background"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</ScrollView>
