<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jose.guiacom.LoginAdminActivity"
    tools:showIn="@layout/activity_login_admin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_login"
        android:id="@+id/txtLogin"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_info"
        android:id="@+id/loginInfo"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:layout_below="@+id/txtLogin"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLogin"
        android:layout_marginTop="100sp"
        android:inputType="textEmailAddress"
        android:id="@+id/txtEmail"
        android:hint="@string/email_admin_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/txtSenha"
        android:hint="@string/senha_admin_hint"
        android:layout_below="@+id/txtEmail"
        android:layout_marginTop="30sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_admin"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/txtSenha"
        android:layout_marginTop="30sp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
