<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jose.guiacom.ContatoActivity"
    tools:showIn="@layout/activity_contato">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contato"
        android:id="@+id/txtContato"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp"
        android:layout_alignParentTop="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnVoltar"
        android:src="@drawable/voltar"
        android:background="@color/background"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginRight="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginLeft="16sp"
        android:layout_marginStart="16sp"
        android:text="@string/contato_info"
        android:layout_below="@id/btnVoltar"
        android:layout_marginTop="30sp"
        android:id="@+id/txtInfo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgEmail"
        android:src="@drawable/email"
        android:layout_below="@+id/txtInfo"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contato_email"
        android:id="@+id/txtEmail"
        android:textStyle="bold"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="2sp"
        android:layout_alignTop="@+id/imgEmail"
        android:layout_toRightOf="@+id/imgEmail"
        android:layout_toEndOf="@+id/imgEmail" />

</RelativeLayout>
